# cpp

./: basics  basics.cpp  consts  consts.cpp  debug  debug.cpp  inheritance  inheritance.cpp  interview.c  linked_list  linked_list.cpp  lvaluervalue.cpp  matrix  matrix.cpp  neural_network.cpp  pointers  pointers.cpp  regression.cpp  sort2  sort2.cpp  templates  templates.cpp  test  thread_pool.cpp  thread_pool.h
libalg/: CMakeLists.txt  README.md  libalg.cpp  matrix.cpp  matrix.hpp  transforms.cpp
libalg/MathFunctions/: CMakeLists.txt  sqrt.cpp  sqrt.h
libalg/tests/: CMakeLists.txt  another_test.cc  final_test.cc  libalg_test.cc  matrix_test.cc
multifile/: Makefile  add.cpp  add.h  main.cpp  multiply.h
neural_network/: Makefile  edge.cpp  edge.h  neural_network.cpp  neural_network.h  own_templates.h  perceptron.cpp  perceptron.h  readme.md  transfer.h  xor.txt
oop/: CMakeLists.txt
oop/Ball/: Ball.h  ball  ball.cpp
oop/IntPair/: IntPair.h  main  main.cpp
oop/Point3d/: Point3d.h  point3d  point3d.cpp
oop/RGBA/: RGBA.h  rgba  rgba.cpp
oop/Stack/: Stack.h  stack  stack.cpp
oop/tests/: oop_test.cc
template_exercises/: 01_function_templates.hpp  02_class_templates.hpp  03_specialization.hpp  04_variadic_templates.hpp  05_sfinae.hpp  06_concepts.hpp  07_advanced.hpp  08_x_macros.hpp  09_pimpl.hpp  10_cpp_idioms.hpp  11_design_patterns.hpp  12_type_techniques.hpp  13_stl_ranges.hpp  14_functional_programming.hpp  15_performance_patterns.hpp  16_move_semantics.hpp  CMakeLists.txt  QUICKSTART.md  README.md
template_exercises/tests/: CMakeLists.txt  template_exercises_test.cc
